# mdjourney

./: .fair_meta_config.docker.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api.prod  LICENSE  README.md  REFACTORING_GAP_ANALYSIS.md  auth.md  docker-compose.dev.yml  env.example  pyproject.toml
api/models/: pydantic_models.py
api/routers/: project_service.py
app/core/: __init__.py  exceptions.py  performance.py
app/monitors/: folder_monitor.py
app/services/: file_processor.py
app/utils/: __init__.py
auth/migrations/: 001_init.sql
auth/scripts/: generate_keys.py  init_db.py
documentation/: README.md
documentation/explanation/: schema-resolution.md  system-workflow.md
documentation/how-to-guides/: performance-optimizations.md  testing-the-codebase.md  using-docker.md
frontend/: Dockerfile.dev  README.md  SETUP_HUSKY.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
mdjourney-refactored/: .dockerignore  .fair_meta_config.docker.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.api  Dockerfile.api.prod  Dockerfile.gateway  Dockerfile.monitor  MANIFEST.in  Makefile  README.md  docker-compose.backend.yml  docker-compose.dev.yml  docker-compose.frontend.yml  docker-compose.yml  env.example  manage.py  pyproject.toml  sample-config.yaml
mdjourney-refactored/documentation/: README.md
mdjourney-refactored/documentation/explanation/: gateway-architecture.md  system-architecture.md
mdjourney-refactored/documentation/how-to-guides/: acl-based-authentication.md  rbac-file-based-auth.md  user-authentication.md
mdjourney-refactored/documentation/reference/: api-endpoints.md
mdjourney-refactored/mdjourney-backend/: __init__.py  dependencies.py  main.py  requirements.txt
mdjourney-refactored/mdjourney-backend/app/: __init__.py
mdjourney-refactored/mdjourney-backend/app/core/: __init__.py  auth.py  background_tasks.py  config.py  config_manager.py  exceptions.py
mdjourney-refactored/mdjourney-backend/app/monitors/: __init__.py  folder_monitor.py
mdjourney-refactored/mdjourney-backend/app/services/: __init__.py  async_file_processor.py  async_schema_manager.py  file_processor.py  metadata_generator.py  scanners.py  schema_manager.py  version_control.py
mdjourney-refactored/mdjourney-backend/app/utils/: __init__.py
mdjourney-refactored/mdjourney-backend/models/: pydantic_models.py
mdjourney-refactored/mdjourney-backend/packaged_schemas/: complete_metadata_schema.json  dataset_administrative_schema.json  fair_meta_config_template.yaml  project_administrative_schema.json
mdjourney-refactored/mdjourney-backend/packaged_schemas/contextual/: genomics_sequencing.json
mdjourney-refactored/mdjourney-backend/routers/: metadata_service.py  project_service.py  schema_service.py  services.py
mdjourney-refactored/mdjourney-backend/scripts/: __init__.py  build_package.py  lint.py  process_manager.py  setup_config.py  validate_config.py
mdjourney-refactored/mdjourney-backend/tests/: conftest.py  run_tests.py
mdjourney-refactored/mdjourney-backend/tests/fixtures/: test_data.py
mdjourney-refactored/mdjourney-backend/tests/integration/: test_api_endpoints.py
mdjourney-refactored/mdjourney-gateway/: gateway_process_manager_local.py  main.py  requirements.txt  users.py
mdjourney-refactored/mdjourney-gateway/auth/: auth.py  config.py  dependencies.py  models.py
mdjourney-refactored/mdjourney-gateway/tests/: test_auth.py
mdjourney-refactored/mdjourney-webapp/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json
mdjourney-refactored/mdjourney-webapp/src/: App.css  App.tsx  index.css
mdjourney-refactored/mdjourney-webapp/src/components/: NavigationPanel.tsx  ProjectBrowser.tsx  ProtectedRoute.tsx
mdjourney-refactored/mdjourney-webapp/src/components/editor/: EditorHeader.tsx  FileUploadDialog.tsx
mdjourney-refactored/mdjourney-webapp/src/context/: AuthContext.tsx
mdjourney-refactored/mdjourney-webapp/src/pages/: LoginPage.tsx
mdjourney-refactored/mdjourney-webapp/src/services/: api.ts
mdjourney-refactored/mdjourney-webapp/src/store/: appStore.ts
mdjourney-refactored/mdjourney-webapp/src/types/: api.ts
mdjourney-refactored/mdjourney-webapp/src/utils/: formAnalyzer.ts
old/: .dockerignore  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.monitor  MANIFEST.in  Makefile  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  manage.py
old/api/: dependencies.py  (+1 more)
packaged_schemas/: complete_metadata_schema.json  dataset_structural_schema.json  experiment_contextual_schema.json  fair_meta_config_template.yaml  instrument_technical_schema.json  project_descriptive.json
scripts/: validate_config.py
tests/: __init__.py  conftest.py  requirements-test.txt  run_tests.py
(+73 files in other folders)
